--- a/doc/user_docs/main.tex
+++ b/doc/user_docs/main.tex
@@ -193,6 +193,7 @@
   \tableofcontents
   \listofalgorithms
   \lstlistoflistings
+  \listoffigures
   \listoftables
   \newpage
 
@@ -390,11 +391,14 @@ Sale amount = $6493750.00
       \end{lstlisting}
     \end{minipage}
 
+  % Appendix
+  \newpage
   % Images
-  % \section{Images}
-    % \begin{sidewaysfigure}[ht]
-      % \includegraphics[%
-      %   width={1000px}%
-      % ]{compandrun.png}
-    % \end{sidewaysfigure}
+  \section{Images}
+    \begin{sidewaysfigure}
+      \includegraphics[%
+        width={650px}%
+      ]{compile.png}
+      \caption{Compiling Chapter 3`s Program}
+    \end{sidewaysfigure}
 \end{document}
