--- a/doc/user_docs/main.tex
+++ b/doc/user_docs/main.tex
@@ -1,8 +1,8 @@
 %
-% Module 2 Chapter 3 Program Documentation
+% Module 2 Chapter 4 Program Documentation
 % CSC160-C00: Computer Science I (C++) (Jeffrey Hemmes)
 % Author: Ashton Hellwig
-% Date: 29 February 2020
+% Date: 07 March 2020
 %
 
 
@@ -171,10 +171,10 @@
   \setlength{\floatsep}{12pt}
   \setlength{\parindent}{2em}
   \setlength{\parskip}{0.5em}
-  \renewcommand{\baselinestretch}{0.75}
+  \renewcommand{\baselinestretch}{.9}
 
   %% Title page
-  \title{Chapter 3 Programming Assignment Documentation}
+  \title{Chapter 4 Programming Assignment Documentation}
   \author{Ashton Hellwig}
   \date\today
   \setcounter{tocdepth}{3}
@@ -182,7 +182,7 @@
   %% Subsequent pages
   \lhead{CSC160}
   \rhead{Computer Science I (C++)}
-  \lfoot{M2C3Program}
+  \lfoot{M2C4Program}
   \rfoot{A. Hellwig}
 
 
@@ -194,7 +194,6 @@
   \listofalgorithms
   \lstlistoflistings
   \listoffigures
-  \listoftables
   \newpage
 
 
@@ -202,86 +201,74 @@
   \section{Problem Analysis}
     The problem states:
     \begin{mdframed}[backgroundcolor=green!20]
-      This assignment relates to content from Chapter 3 of the eText.
+      This assignment relates to content from Chapter 4 of the eText.
 
       \textbf{Instructions}\vspace{-8pt}
       \begin{enumerate}
         \item Review the general programming assignment instructions.
         \item%
-          The manager of a football stadium wants you to write a program
-            that calculates the total ticket sales after each game. There are
-            four types of tickets -- box, sideline, premium, and general
-            admission. After each game, data is stored in a file in the format
-            specified in Table \ref{pa:data}.
-            \begin{itemize}
-              \item According to the assignment instructions, The first line
-                indicates that the ticket price is \$250 and that 5750 tickets
-                were sold at that price. Output the total number of tickets sold
-                and the total sale amount into an output file. Format your
-                output with two decimal places (You are required to generate an
-                output file that has the results).
-            \end{itemize}
+          A box of cookies can hold 24 cookies, and a container can hold 75
+            boxes of cookies. Write a program that prompts the user to enter the
+            total number of cookies. The program then outputs the number of
+            boxes and the number of containers to ship the cookies. Note that
+            each box must contain the specified number of cookies, and each
+            container must contain the specified number of boxes. If the last
+            box of cookies contains less than the number of specified cookies,
+            you can discard it and output the number of leftover cookies.
+            Similarly, if the last container contains less than the number of
+            specified boxes, you can discard it and output the number of
+            leftover boxes. Because this is a chapter on Selectional Control
+            Structure, if there are no cookies or no boxes remaining then the 
+            remaining cookies or remaining boxes must not be output.
       \end{enumerate}
     \end{mdframed}
 
     \subsection{Data}
-      We know our output data must be output to a text document titled
-        \texttt{Ch3\_Ex5Out.txt} (we chose the .txt extension to help
-        reproducibility). See Section \ref{sec:filetypes} for input and output
-        file formats.
-
-      \begin{table}[h!]
-        \begin{tabular}{ ||l|l|| }
-          \hline
-          ticketPrice &numberOfTicketsSold \\
-          \hline\hline
-          250 &5750 \\
-          100 &28000 \\
-          50  &35750 \\
-          25  &18750 \\
-          \hline
-        \end{tabular}
-        \centering
-        \caption{Chapter 3 Example Data}
-        \label{pa:data}
-      \end{table}
+      We are told that if there are no cookies or no boxes left then they should
+        not be output. We also know the following about the variables we will
+        need to utilize:
 
       \begin{enumerate}
-        \item \texttt{outputData} must be formatted with two decimal places.
-        \item \texttt{outputData} must be written to a file called
-          ``\texttt{Ch3\_Ex5Data.txt}''.
-        \item There are four tiers of tickets:
-          \begin{enumerate}
-            \item \texttt{box}: cost \$250 and $5750$ were sold
-            \item \texttt{sideline}: cost \$100 and $28000$ were sold.
-            \item \texttt{premium}: cost \$50 $35750$ were sold.
-            \item \texttt{generalAdmission}: cost \$25 and $18750$ were sold.
-          \end{enumerate}
+        \item \texttt{cookieBoxes} can hold $24$ of the \texttt{totalCookies}.
+        \item \texttt{cookieContainer} can hold $75$ \texttt{cookieBox}es.
+        \item \texttt{totalCookies} is the number of cookies to consider for
+          this shipment scenario. It is provided by the user when prompted.
       \end{enumerate}
+
+      We are also not to count \texttt{cookieBoxes} which are not full. Instead,
+        we discard it and also output the number of leftover
+        \texttt{totalCookies}. The same rule applies to containers which do not
+        contain \textit{exactly} the specified amount of boxes required.
 
     \subsection{Desired Output}
       \begin{lstlisting}[%
         language=bash,%
         columns=flexible,%
-        caption={ashellwig\_m2c3\_programming\_assignment output (stdout)},%
-        label=stdout%
+        caption={ashellwig\_m2c4\_programming\_assignment output (stdout)},%
+        label={desiredoutput:stdout}%
     ]
-Processing data...
-See output file: bin/Ch3_Ex5Out.txt for the results.
+Enter the total number of cookies: "${USER_INPUT}"
 
+The number of cookie boxes needed to hold the cookies: "${TOTAL_BOXES}"
+Leftover cookies: "${LEFTOVER_COOKIES}"
+The number of containers needed to store the cookie boxes: "${TOTAL_CONTAINERS}"
+Leftover boxes: "${LEFTOVER_BOXES}"
 Press any key to continue...
       \end{lstlisting}
-
       \begin{lstlisting}[%
         language=bash,%
         columns=flexible,%
-        caption={%
-          ashellwig\_m2c3\_programming\_assignment output (Ch3\_Ex5Out.txt)%
-        },%
-        label=outputdata%
+        caption={ashellwig\_m2c4\_programming\_assignment output %
+          (stdout-example)},%
+        label={desiredoutput:example}%
     ]
-Number of tickets sold = 88250
-Sale amount = $6493750.00
+Enter the total number of cookies: 12345
+
+The number of cookie boxes needed to hold the cookies: 514
+Leftover cookies: 9
+The number of containers needed to store the cookie boxes: 6
+Leftover boxes: 64
+Press any key to continue...
       \end{lstlisting}
 
 
@@ -290,7 +277,7 @@ Sale amount = $6493750.00
   \section{Algorithm}
     Below is the algorithm for the program.
     \begin{algorithm}[h]
-      \caption{Chapter 3 Program Algorithm}
+      \caption{Chapter 4 Program Algorithm}
       \vspace{12pt}
       \begin{algorithmic}[1]
         % MAIN
@@ -307,7 +294,11 @@ Sale amount = $6493750.00
 
   % User Documentation
   \newpage
+  
   \section{User Documentation}
+    Please see Appendix \ref{appendix:img} for images showing the compilation
+      (Figure \ref{img:compilation}) and the running program (Figure
+      \ref{img:running}).
 
     %% Usage
     \subsection{Build}
@@ -322,7 +313,7 @@ Sale amount = $6493750.00
             \textbf{with a terminal emulator or command prompt}, this will
             (most likely) mean running:
             \begin{lstlisting}[language=bash]
-cd ~/Downloads/ashellwig_m2c3_programming_assignment
+cd ~/Downloads/ashellwig_m2c4_programming_assignment
             \end{lstlisting}
           \item Compile the program and documentation\footnote{\textbf{Note%
             }: This requires the whole \texttt{texlive} suite as well as
@@ -330,11 +321,11 @@ cd ~/Downloads/ashellwig_m2c3_programming_assignment
             switching to the source directory:
             \begin{lstlisting}[%
               language=bash,%
-              caption={Chapter 3 Program Build Commands},%
+              caption={Chapter 4 Program Build Commands},%
             ]
 make debug
 
-./out/bin/ashellwig_m2c3_programming_assignment.bin # Run program
+./out/bin/ashellwig_m2c4_programming_assignment.bin # Run program
 
 make clean-all # Removes object files, binaries, and docs
             \end{lstlisting}
@@ -345,69 +336,36 @@ make clean-all # Removes object files, binaries, and docs
             \textbf{with a terminal emulator or command prompt}, this will
             (most likely) mean running:
             \begin{lstlisting}[language=bash]
-cd ~/Downloads/ashellwig_m2c3_programming_assignment/bin
+cd ~/Downloads/ashellwig_m2c4_programming_assignment/bin
             \end{lstlisting}
           \item To run the program simply issue this within the command
             prompt
             \begin{lstlisting}[language=bash]
-./build/ashellwig_m2c3_programming_assignment
+./build/ashellwig_m2c4_programming_assignment
             \end{lstlisting}
         \end{enumerate}
         Of course if preferred, you may also navigate to the build folder in
           file explorer and double click the executable
-          (\texttt{./ashellwig\_m2c3\_programming\_assignment}).
+          (\texttt{./ashellwig\_m2c4\_programming\_assignment}).
 
 
   % Appendix
-  % \newpage
-  \section{Input/Output File Formats}\label{sec:filetypes}
-    \noindent\begin{minipage}{.45\textwidth}
-      \begin{figure}[H]
-        \begin{tabular}{ |ll| }
-          \hline
-          250 &5750 \\
-          100 &28000 \\
-          50  &35750 \\
-          25  &18750 \\
-          \hline
-        \end{tabular}
-        \centering
-        \caption{Input File Format}
-      \end{figure}
-    \end{minipage}\hfill
-    \begin{minipage}[t]{.45\textwidth}
-      \begin{lstlisting}[%
-        language=bash,%
-        columns=flexible,%
-        caption={%
-          Output File Format%
-        },%
-        label=outputfileformat%
-    ]
-Number of tickets sold = 88250
-Sale amount = $6493750.00
-      \end{lstlisting}
-    \end{minipage}
-
-  % Appendix
+  \appendix
   \newpage
   % Images
-  \section{Images}
-    \begin{sidewaysfigure}
-      \includegraphics[%
-        width={\textwidth}%
-      ]{compile.png}
-      \caption{Compiling Chapter 3`s Program}
-    \end{sidewaysfigure}
-    \begin{sidewaysfigure}
-      \includegraphics[%
-        width={\textwidth}%
-      ]{run.png}
-      \caption{Running Chapter 3`s Program}
-    \end{sidewaysfigure}
-    \begin{figure}
-      \includegraphics[%
-      ]{outfile.png}
-      \caption{Chapter 3`s Output File}
+  \section{Images}\label{appendix:img}
+    \begin{figure}[H]
+      % \includegraphics[%
+        % width={\textwidth}%
+      % ]{compile.png}
+      \caption{Compiling Chapter 4`s Program}
+      \label{img:compilation}
+    \end{figure}
+    \begin{figure}[H]
+      % \includegraphics[%
+        % width={\textwidth}%
+      % ]{run.png}
+      \caption{Running Chapter 4`s Program}
+      \label{img:running}
     \end{figure}
 \end{document}
